--- a/src/components/Task.module.css
+++ b/src/components/Task.module.css
@@ -1,6 +1,9 @@
 .task {
-    border-bottom: 1px solid #ec9494;
-    padding: 1rem;
-    font-weight: bold;
-    font-size: 1.25rem;
+  background-color:rgb(121, 121, 196);
+    border-bottom: 5px solid #ece994;
+    border-radius: 12px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+    width: 80%;
+    display: inline-block;
+    margin: 5px;
   }
