--- a/src/components/ToDoLists.module.css
+++ b/src/components/ToDoLists.module.css
@@ -1,8 +1,18 @@
 .div {
-    max-width: 40rem;
-    margin: 2rem auto;
-    background-color: white;
-    padding: 1rem;
-    border-radius: 12px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
-  }
+  max-width: 40rem;
+  margin: 2rem auto;
+  background-color: white;
+  padding: 1rem;
+  border-radius: 12px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+}
+
+.task {
+  background-color: rgb(121, 121, 196);
+  border-bottom: 5px solid #ece994;
+  border-radius: 12px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+  width: 80%;
+  display: inline-block;
+  margin: 5px;
+}
