--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,21 @@
+.app {
+  text-align: center;
+  background-color: #adc3f7;
+}
+
+.button {
+  background-color: #007bff;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: #0056b3;
+}
+
 .form {
   width: 90%;
   margin: 10px auto;
@@ -5,13 +23,13 @@
   border: 1px solid #ccc;
   background-color: #fff;
   border-radius: 12px;
+
 }
 
 .list {
   border-radius: 12px;
   border: 1px solid #ccc;
   width: 100%;
-  max-width: 300px;
   padding: 20px;
   background-color: bisque;
 
@@ -69,20 +87,12 @@ button:hover {
   padding: 80px;
   border: 1px solid #888;
   width: 60%;
-  max-width: 300px;
   height: 60%;
   position: relative;
   border-radius: 12px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   overflow-y: auto;
-  max-height: 80vh; 
-
-  scrollbar-width: none; 
-  -ms-overflow-style: none; 
-}
-
-.modalContent::-webkit-scrollbar {
-  display: none; 
+  max-height: 80vh;
 }
 
 .close {
@@ -103,5 +113,3 @@ button:hover {
   display: inline-block;
   margin: 5px;
 }
-
-
