--- a/src/components/FormTask/styles/FormTask.css
+++ b/src/components/FormTask/styles/FormTask.css
@@ -1,11 +1,33 @@
-.form {
-  width: 90%;
-  margin: 10px auto;
-  padding: 20px;
-  border: 1px solid #ccc;
-  background-color: #fff;
-  border-radius: 12px;
+.form-task {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
+
+.form-task-wrap-input {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form-task-wrap-input input {
+  
+  border-bottom: 2px solid #deddcc;
+  border-radius: 8px;
+  
+
+}
+
+.form-task textarea {
+  width: 170px;
+  height: 70px;
+  overflow: hidden;
+
+  border-bottom: 3px solid #deddcc;
+  border-radius: 5px;
+  background-color: bisque;
+}
+
 
 .list {
   border-radius: 12px;
@@ -71,18 +93,18 @@ button:hover {
   width: 60%;
   max-width: 300px;
   height: 60%;
-  position: relative;
+  position: absolute;
   border-radius: 12px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   overflow-y: auto;
-  max-height: 80vh; 
+  max-height: 80vh;
 
-  scrollbar-width: none; 
-  -ms-overflow-style: none; 
+  scrollbar-width: none;
+  -ms-overflow-style: none;
 }
 
 .modalContent::-webkit-scrollbar {
-  display: none; 
+  display: none;
 }
 
 .close {
@@ -103,5 +125,3 @@ button:hover {
   display: inline-block;
   margin: 5px;
 }
-
-
