--- a/src/components/CardList/styles/CardList.css
+++ b/src/components/CardList/styles/CardList.css
@@ -85,7 +85,7 @@
 
 
 
-.form {
+/* .form {
   width: 86%;
   margin: 10px auto;
   padding: 12px;
@@ -165,4 +165,4 @@ button:hover {
   color: crimson;
   font-weight: bold;
   cursor: pointer;
-}
+} */
