--- a/src/components/ToDoLists/styles/ToDoLists.css
+++ b/src/components/ToDoLists/styles/ToDoLists.css
@@ -16,3 +16,17 @@
   display: inline-block;
   margin: 5px;
 }
+
+.delete-btn:hover {
+  color: red;
+  transform: translateY(-3px);
+}
+
+.edit-btn:hover {
+  color: blue;
+  transform: translateY(-3px);
+}
+.delete-btn,
+.edit-btn {
+  transition: transform 0.2s ease-in-out;
+}
