improvements to the app

--- a/src/components/TaskCard/styles/TaskCard.css
+++ b/src/components/TaskCard/styles/TaskCard.css
@@ -73,16 +73,21 @@ tbody td:hover {
 .tooltip .tooltiptext {
   visibility: hidden;
   position: absolute;
-  background-color: #08adce;
+  /* background-color: #08adce; */
+  background-color: rgba(8, 173, 206, 0.8);
   color: #fff;
   padding: 5px;
   border-radius: 3px;
   white-space: nowrap;
   z-index: 1;
+  transform: translateX(-100%);
+  opacity: 0;
+  transition: opacity 0.3s;
 }
 
 .tooltip:hover .tooltiptext {
   visibility: visible;
+  opacity: 1;
   
 }
 
