--- a/src/App.module.css
+++ b/src/App.module.css
@@ -3,57 +3,6 @@
   background-color: #adc3f7;
 }
 
-.button {
-  background-color: #007bff;
-  color: white;
-  padding: 20px 20px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.button:hover {
-  background-color: #0056b3;
-}
-
-.form {
-  width: 90%;
-  margin: 10px auto;
-  padding: 20px;
-  border: 1px solid #ccc;
-  background-color: #fff;
-  border-radius: 12px;
-
-}
-
-.list {
-  border-radius: 12px;
-  border: 1px solid #ccc;
-  width: 100%;
-  padding: 20px;
-  background-color: bisque;
-
-}
-
-.form input {
-  width: 90%;
-  padding: 10px;
-  border: 1px solid #ccc;
-  outline: none;
-  border-radius: 12px;
-
-}
-
-.form input:focus {
-  outline: none;
-  background-color: #cecaee;
-}
-
-.error {
-  color: red
-}
-
-
 button {
   background-color: #08adce;
   color: #fff;
@@ -61,55 +10,19 @@ button {
   border: none;
   cursor: pointer;
   margin: 20px auto;
-  border-radius: 6px;
+  margin-right: 10px;
+  border-radius: 5px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+  transition: transform 0.3s ease-in-out;
+  font-size: 18px;
 }
 
 button:hover {
   outline: none;
   background-color: #0bd0f7;
+  transform: translateY(-3px);
 }
 
-.modal {
-  display: block;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
-}
-
-.modalContent {
-  background-color: rgb(255, 252, 252);
-  margin: 15% auto;
-  padding: 80px;
-  border: 1px solid #888;
-  width: 60%;
-  height: 60%;
-  position: relative;
-  border-radius: 12px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
-  overflow-y: auto;
-  max-height: 80vh;
-}
-
-.close {
-  position: absolute;
-  top: 10px;
-  right: 20px;
-  font-size: 24px;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-.task {
-  background-color: rgb(174, 174, 194);
-  border-bottom: 5px solid #ece994;
-  border-radius: 12px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
-  width: 80%;
-  display: inline-block;
-  margin: 5px;
+input .input-error{
+  border: 2px solid red
 }
