--- a/src/components/FormTask/styles/FormTask.css
+++ b/src/components/FormTask/styles/FormTask.css
@@ -10,118 +10,30 @@
   align-items: center;
 }
 
-.form-task-wrap-input input {
-  
-  border-bottom: 2px solid #deddcc;
-  border-radius: 8px;
-  
-
+.input-error {
+  border: 2px solid red;
+  border-radius: 4px;
 }
 
-.form-task textarea {
+
+.form-input {
+  border: 1px solid white;
+  border-radius: 4px;
+}
+
+.form-input,
+.input-error:focus {
+  outline: none;
+}
+
+.form-input textarea {
   width: 170px;
   height: 70px;
   overflow: hidden;
+  border-radius: 4px;
+
 }
 
-.form-task-wrap-btn button{  
+/* .form-task-wrap-btn button {
   margin-right: 10px;
-}
-
-
-/* .list {
-  border-radius: 12px;
-  border: 1px solid #ccc;
-  width: 100%;
-  max-width: 300px;
-  padding: 20px;
-  background-color: bisque;
-
-}
-
-.form input {
-  width: 90%;
-  padding: 10px;
-  border: 1px solid #ccc;
-  outline: none;
-  border-radius: 12px;
-
-}
-
-.form input:focus {
-  outline: none;
-  background-color: #cecaee;
-}
-
-.error {
-  color: red
-}
-
-
-button {
-  background-color: #08adce;
-  color: #fff;
-  padding: 10px;
-  border: none;
-  cursor: pointer;
-  margin: 20px auto;
-  border-radius: 6px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
-}
-
-button:hover {
-  outline: none;
-  background-color: #0bd0f7;
-}
-
-.modal {
-  display: block;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
-}
-
-.modalContent {
-  background-color: rgb(255, 252, 252);
-  margin: 15% auto;
-  padding: 80px;
-  border: 1px solid #888;
-  width: 60%;
-  max-width: 300px;
-  height: 60%;
-  position: absolute;
-  border-radius: 12px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
-  overflow-y: auto;
-  max-height: 80vh;
-
-  scrollbar-width: none;
-  -ms-overflow-style: none;
-}
-
-.modalContent::-webkit-scrollbar {
-  display: none;
-}
-
-.close {
-  position: absolute;
-  top: 10px;
-  right: 20px;
-  font-size: 24px;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-.task {
-  background-color: rgb(174, 174, 194);
-  border-bottom: 5px solid #ece994;
-  border-radius: 12px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
-  width: 80%;
-  display: inline-block;
-  margin: 5px;
 } */
