--- a/src/components/TaskCard/styles/TaskCard.css
+++ b/src/components/TaskCard/styles/TaskCard.css
@@ -1,8 +1,8 @@
 .task-card {
   list-style: none;
-  background-color: #edc3f933;
-  border: 2px solid #ccc;
-  border-radius: 5px;
+  background-color: #fff;
+  border: 4px solid #428BCA;
+  border-radius: 11px;
   padding: 10px;
   margin: 10px 0;
   display: flex;
