--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@ body {
   margin: 0 auto;
 }
 
+.modal-open {
+  overflow: hidden;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
