--- a/src/components/ListCard/styles/ListCard.css
+++ b/src/components/ListCard/styles/ListCard.css
@@ -52,30 +52,13 @@
   border-radius: 12px;
   border: 1px solid #ccc;
   margin: 0 auto;
-  background-color: bisque;
+  background-color: #D5E7F4;
   align-items: center;
-}
-
-.edit {
-  background-color: rgb(254, 221, 180);
 }
 
 .error {
   border: 2px solid #f90000;
-  background-color: bisque;
 }
-
-.error-form-wrapper-edit {
-  display: flex;
-  flex-direction: column;
-  width: 80%;
-  border-radius: 12px;
-  border: 2px solid #f90000;
-  margin: 0 auto;
-  background-color: rgb(254, 221, 180);
-}
-
-
 
 .form-wrapper h3 {
   margin-top: 15px;
@@ -89,14 +72,8 @@
   border-radius: 12px;
   border: 1px solid #ccc;
   margin: 0 auto;
-  background-color: bisque;
+  background-color: #D5E7F4;
   align-items: center;
-  margin-bottom: 10px;
-}
-
-.input-error {
-  border: 2px solid red;
-  border-radius: 4px;
   margin-bottom: 10px;
 }
 
@@ -106,7 +83,6 @@
   margin-bottom: 10px;
 }
 
-.neme-input,
-.input-error:focus {
+.neme-input:focus {
   outline: none;
 }
