--- a/src/components/ListCard/styles/ListCard.css
+++ b/src/components/ListCard/styles/ListCard.css
@@ -37,9 +37,9 @@
 
 
 .close {
-  position: absolute;
-  top: 10px;
-  right: 20px;
+  position: fixed;
+  top: 12%;
+  right: 32%;
   font-size: 24px;
   font-weight: bold;
   cursor: pointer;
