update save button css

--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,7 @@ button:hover {
   transform: translateY(-3px);
 }
 
-/* input.input-error {
-  border: 2px solid red
-} */
+.error-button,
+.error-button:hover{
+  background-color: #9db4b9;
+}
