--- a/src/components/ListCard/styles/ListCard.css
+++ b/src/components/ListCard/styles/ListCard.css
@@ -81,3 +81,32 @@
 .name-input:focus {
   outline: none;
 }
+
+.form-task {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form-task-wrap-input {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form-input {
+  border: 1px solid white;
+  border-radius: 4px;
+}
+
+.form-input:focus {
+  outline: none;
+}
+
+.form-input textarea {
+  width: 170px;
+  height: 70px;
+  overflow: hidden;
+  border-radius: 4px;
+
+}
